# cyberboard-cli

./: .gitignore  README.md  pyproject.toml
.claude/: README.md
.claude-plugin/: marketplace.json
.claude/rules/: 00-overview.md  10-config-schema.md  20-am-master-internals.md  30-write-protocol.md  40-cli-spec.md  90-research-log.md
.claude/skills/cyberboard-device/: SKILL.md
.claude/skills/cyberboard-led/: SKILL.md
.claude/skills/decompile-pyinstaller/: SKILL.md
.claude/skills/decompile-pyinstaller/references/: macos-usb-device-id.md
.github/workflows/: publish.yml
_re/: verify_encoding.py  zscan.py
cyberboard/: __init__.py  cli.py  completion.py  mcp_server.py
examples/led/: README.md  compose.toml  composite.json  pattern-gradient.json  pattern-hue.json  pattern-stripes.json  sequence.json  sprite-scroll.json  text-scroll.json
experiments/frame-limit-256/: README.md  base.json  generate_numbered.py
experiments/keymap-matrix/: README.md  decode_keymap.py
experiments/partial-write/: README.md  probe_partial_write.py
experiments/perkey-layout/: r4-perkey-layout.json  render_tui.py
plugins/cyberboard/.claude-plugin/: plugin.json
plugins/cyberboard/skills/cyberboard-led/: SKILL.md
presets/: r4-keymap-aliases.json
schemas/: cyberboard-config.schema.json
tools/: cb_anim.py  cb_build.py  cb_device.py  cb_diff.py  cb_doctor.py  cb_dump.py  cb_font.py  cb_get.py  cb_history.py  cb_keymap.py  cb_keymap_color.py  cb_keymap_tui.py  cb_led.py  cb_ledtoml.py  cb_protocol.py  cb_read.py  cb_restore.py  cb_set.py  cb_settime.py  cb_store.py  cb_verify.py  cb_write.py  keycode.py  keymap_alias.py  requirements.txt
tools/fonts/: README.md
