[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberboard-cli"
version = "0.1.0"
description = "Configure the AngryMiao CyberBoard R4 (keymap + LED) over USB without AM Master"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "GeneralD" }]
keywords = ["cyberboard", "angrymiao", "keyboard", "keymap", "led", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Device I/O is the core purpose, so pyserial is a hard dependency.
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
# LED authoring (cb_led GIF<->IR codec, cb_anim renderer).
led = ["pillow>=10.0"]
# Strict schema validation in `verify` (degrades to basic checks without it).
verify = ["jsonschema>=4.0"]
# Everything.
all = ["pillow>=10.0", "jsonschema>=4.0"]

[project.scripts]
cyberboard = "cyberboard.cli:main"

[project.urls]
Homepage = "https://github.com/GeneralD/cyberboard-cli"
Repository = "https://github.com/GeneralD/cyberboard-cli"

[tool.hatch.build.targets.wheel]
packages = ["cyberboard"]

# The cb_* tool modules live in tools/ as standalone scripts. Ship them
# inside the wheel as cyberboard/_tools so an installed `cyberboard` finds
# them (the dispatcher prefers ../tools in the repo, then this path).
[tool.hatch.build.targets.wheel.force-include]
"tools" = "cyberboard/_tools"
