[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberboard-cli"
version = "0.1.1"
description = "Configure the AngryMiao CyberBoard R4 (keymap + LED) over USB without AM Master"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "GeneralD" }]
keywords = ["cyberboard", "angrymiao", "keyboard", "keymap", "led", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
# Device I/O is the core purpose, so pyserial is a hard dependency.
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
# LED authoring (cb_led GIF<->IR codec, cb_anim renderer).
led = ["pillow>=10.0"]
# Strict schema validation in `verify` (degrades to basic checks without it).
verify = ["jsonschema>=4.0"]
# MCP server (cyberboard-mcp) exposing the CLI's operations as MCP tools.
mcp = ["mcp>=1.2"]
# Interactive keymap editor TUI (cyberboard keymap edit).
tui = ["textual>=2.0"]
# Everything.
all = ["pillow>=10.0", "jsonschema>=4.0", "mcp>=1.2", "textual>=2.0"]

[project.scripts]
cyberboard = "cyberboard.cli:main"
cyberboard-mcp = "cyberboard.mcp_server:main"

[project.urls]
Homepage = "https://github.com/GeneralD/cyberboard-cli"
Repository = "https://github.com/GeneralD/cyberboard-cli"
Issues = "https://github.com/GeneralD/cyberboard-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["cyberboard"]

# The cb_* tool modules live in tools/ as standalone scripts. Ship them
# inside the wheel as cyberboard/_tools so an installed `cyberboard` finds
# them (the dispatcher prefers ../tools in the repo, then this path).
# presets/ holds the R4 keymap alias table; keymap_alias._preset_path()
# resolves it relative to the package (cyberboard/presets in the wheel),
# so it must be shipped too or alias resolution raises FileNotFoundError.
[tool.hatch.build.targets.wheel.force-include]
"tools" = "cyberboard/_tools"
"presets" = "cyberboard/presets"
